fixed the tmux vim colorscheme problem

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,4 +20,4 @@ set -g prefix C-a
 bind-key C-a send-prefix
 
 # look good
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
