--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,4 +20,8 @@ set -g prefix C-a
 bind-key C-a send-prefix
 
 # look good
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
