--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # act like vim
 setw -g mode-keys vi
@@ -20,4 +20,10 @@ set -g prefix C-a
 bind-key C-a send-prefix
 
 # look good
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
+
+# make sure to upgrade to latest version of reattach-to-user-namespace,
+# otherwise you might be getting an error saying that your OS is not supported.
+set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -sg escape-time 10
+
