--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+set-option -g default-command "zsh"
 
 # act like vim
 setw -g mode-keys vi
@@ -22,8 +23,4 @@ bind-key C-a send-prefix
 # look good
 set -g default-terminal "screen-256color"
 
-# make sure to upgrade to latest version of reattach-to-user-namespace,
-# otherwise you might be getting an error saying that your OS is not supported.
-set-option -g default-command "reattach-to-user-namespace -l bash"
-set-option -sg escape-time 10
-
+set-option -g default-shell /bin/zsh
